[gd_scene load_steps=5 format=3 uid="uid://bdy40i474m5vb"]

[ext_resource type="Texture2D" uid="uid://c4pv6uk8ogsjd" path="res://assets/0x72_16x16RobotTileset.v1.png" id="1_e8don"]
[ext_resource type="Script" path="res://Objects/computer.gd" id="1_e51dq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykp6k"]
size = Vector2(46, 48)

[sub_resource type="SystemFont" id="SystemFont_1nhdd"]
subpixel_positioning = 0

[node name="Computer" type="Area2D"]
script = ExtResource("1_e51dq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ykp6k")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_e8don")
region_enabled = true
region_rect = Rect2(176, 200, 16, 24)

[node name="Label" type="RichTextLabel" parent="."]
visible = false
texture_filter = 1
offset_left = -36.0
offset_top = -46.0
offset_right = 92.0
offset_bottom = -20.0
theme_override_fonts/normal_font = SubResource("SystemFont_1nhdd")
theme_override_font_sizes/normal_font_size = 12
text = "Press X to Use"

[node name="HackMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="HackMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -178.0
offset_right = 38.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="HackMenu/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HackMenu/PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -56.5
offset_right = 52.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="HackMenu/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Your Abilities
"

[node name="HBoxContainer" type="HBoxContainer" parent="HackMenu/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 17

[node name="JumpLabel" type="Label" parent="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Jump"

[node name="JumpButton" type="CheckButton" parent="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HackMenu/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="DashLabel" type="Label" parent="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Dash
"

[node name="DashButton" type="CheckButton" parent="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="HackMenu/PanelContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="AttackLabel" type="Label" parent="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Attack"

[node name="AttackButton" type="CheckButton" parent="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="toggled" from="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer/JumpButton" to="." method="_on_jump_button_toggled"]
[connection signal="toggled" from="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer2/DashButton" to="." method="_on_dash_button_toggled"]
[connection signal="toggled" from="HackMenu/PanelContainer/Panel/VBoxContainer/HBoxContainer3/AttackButton" to="." method="_on_attack_button_toggled"]
